vlib/v/checker/tests/js_number_requires_explicit_cast.vv
fn x(a JS.Number) {
	println(a)
}

fn main() {
	d := 1
	x(d)
}
